# conjugate-gradients

./: .gitignore  CMakeLists.txt  README.md  REFACTOR_PLAN.md
C/: CG.c  CG.h  makefile
CPP/: symsparseprob.h
__old__/C/: main.c
__old__/CPP/: CG_test_cc  main.cpp  makefile
apps/: CMakeLists.txt  test_runner.cpp
src/: CMakeLists.txt  Sparse.cpp  SymSparseProb.cpp  linear_solver.h  linear_solver_complex.cpp  linear_solver_complex.h  linear_solver_real.cpp  linear_solver_real.h  linear_solver_traits.h  sparse.h  sparse_matrix.cpp  sparse_matrix.h  sparse_matrix_complex.cpp  sparse_matrix_complex.h
tests/: CMakeLists.txt  test_solvers.cpp
